# PyVeoliaIDF

./: CHANGELOG.md  MANIFEST.in  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py  updateVersion.py
.github/workflows/: python-publish-develop.yml  python-publish-release.yml  python-publish.yml
pyveoliaidf/: __init__.py  __main__.py  client.py  enum.py  webdriverwrapper.py
test/: __init__.py  test_client.py
tests/: test_client.py
tests/resources/: historique_jours_litres.csv  historique_mois_litres.csv  historique_semaine_litres.csv
