# See documentation : https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# Full example : github.com/pyscaffold/pyscaffold/blob/master/setup.cfg

[metadata]
name = pyveoliaidf
version = attr: pyveoliaidf.__version__
author = Stephane Senart
author_email = stephane.senart@gmail.com
description = Retrieve water consumption from Veolia Ile-de-France web site (French Water Company)
long_description = file: README.md, CHANGELOG.md, LICENSE.md
long_description_content_type = text/markdown
platforms = any
license = MIT
license_files = LICENSE.md
url = https://github.com/ssenart/pyveoliaidf
download_url = https://github.com/ssenart/pyveoliaidf/releases
project_urls =
    Home = https://github.com/ssenart/pyveoliaidf
    Source = https://github.com/ssenart/pyveoliaidf
    Issues = https://github.com/ssenart/pyveoliaidf/issues
    Changelog = https://github.com/ssenart/pyveoliaidf/blob/master/CHANGELOG.md
    Download = https://pypi.org/project/pyveoliaidf
keywords = Resource, Water, Meter, Consumption, Veolia, Ile-de-France
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Libraries
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10                 

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    selenium == 3.141
    openpyxl >= 2.6.3

[options.entry_points]
console_scripts =
    pyveoliaidf = pyveoliaidf.__main__:main

[bdist_wheel]
universal = False
plat-name = any
python-tag = py38
